--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   shared_preferences: ^2.5.3
   dio: ^5.8.0+1
   equatable: ^2.0.7
-  get: ^4.7.2
+  # get: ^4.7.2
   google_fonts: ^6.2.1
   get_it: ^8.0.3
   dartz: ^0.10.1
@@ -47,7 +47,8 @@ dependencies:
   intl: ^0.20.2
   table_calendar: ^3.2.0
   carousel_slider: ^5.1.1
-
+  provider: ^6.1.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
