--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   table_calendar: ^3.2.0
   carousel_slider: ^5.1.1
   provider: ^6.1.5
+  flutter_image_compress: ^2.4.0
   
 dev_dependencies:
   flutter_test:
