--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   carousel_slider: ^5.1.1
   provider: ^6.1.5
   flutter_image_compress: ^2.4.0
+  flutter_colorpicker: ^1.1.0
   
 dev_dependencies:
   flutter_test:
