--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   provider: ^6.1.5
   flutter_image_compress: ^2.4.0
   flutter_colorpicker: ^1.1.0
+  jwt_decode_full: ^0.9.2
   
 dev_dependencies:
   flutter_test:
