--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,11 @@ android {
         }
     }
 }
+dependencies{
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+}
 
 flutter {
     source = "../.."
