--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   flutter_colorpicker: ^1.1.0
   jwt_decode_full: ^0.9.2
+  permission_handler: ^12.0.1
   
 dev_dependencies:
   flutter_test:
