--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   flutter_image_compress: ^2.4.0
   flutter_colorpicker: ^1.1.0
   jwt_decode_full: ^0.9.2
+  universal_html: ^2.2.4
+  path_provider: ^2.1.5
+  excel: ^4.0.6
+  dropdown_search: ^6.0.2
   
 dev_dependencies:
   flutter_test:
@@ -78,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/excel/template.xlsx
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
