--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.1.5
   excel: ^4.0.6
   dropdown_search: ^6.0.2
+  url_launcher: ^6.3.2
   
 dev_dependencies:
   flutter_test:
