--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.3.2
   go_router: ^13.0.1
   get: ^4.7.2
+  url_strategy: ^0.3.0
   
 dev_dependencies:
   flutter_test:
