product detail page done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^30.2.6
   printing: ^5.14.2
   pdf: ^3.11.3
+  cached_network_image: ^3.4.1
   
 dev_dependencies:
   flutter_test:
