--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   printing: ^5.14.2
   pdf: ^3.11.3
   cached_network_image: ^3.4.1
+  share_plus: ^12.0.1
   
 dev_dependencies:
   flutter_test:
